--- a/AraBert_Sentiment_Analysis_End.ipynb
+++ b/AraBert_Sentiment_Analysis_End.ipynb
@@ -2168,7 +2168,7 @@
       "source": [
         "# Good luck :)\n",
         "\n",
-        "by Johno Whitaker"
+        "by Younes Mellouki "
       ]
     }
   ]
